refactor config management
